--- a/pages/category/index.wxss
+++ b/pages/category/index.wxss
@@ -1,1 +1,80 @@
-/* pages/category/index.wxss */
+.content {
+  position: fixed;
+  top: 100rpx;
+  bottom: 0;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.menu {
+  width: 200rpx;
+  height: 100%;
+  background: #eee;
+  overflow: auto;
+  /* 控制缩放 */
+  flex-shrink: 0;
+}
+
+.menu .menu-item {
+  text-align: center;
+  padding: 20rpx 0;
+  border-bottom: 1px #ccc solid;
+}
+
+.product {
+  flex: 1;
+  overflow: auto;
+}
+
+.category-title {
+  text-align: center;
+  padding: 20rpx;
+  color: #ccc;
+}
+
+.category-title text {
+  color: #000;
+  margin: 0 20rpx;
+}
+
+.product-list {
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  padding: 0 20rpx;
+  box-sizing: border-box;
+}
+
+.product-list navigator {
+  display: block;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  width: 33.33%;
+  overflow: hidden;
+  font-size: 12px;
+  box-sizing: border-box;
+  padding: 10rpx;
+}
+
+.product-list navigator image {
+  width: 100%;
+}
+
+.active {
+  color: red;
+  background: #fff;
+}
+
+.active::after {
+  display: block;
+  content: "";
+  width: 3px;
+  height: 16px;
+  background: red;
+  position: absolute;
+  left: 0;
+  top: 50%;
+  transform: translateY(-8px);
+}
