--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,12 +1,5 @@
 <view class="container">
-  <!-- 头部搜索栏 -->
-  <navigator url="">
-    <view class="search">
-      <view class="search-input">
-        <icon type="search" size="18" /> 搜索
-      </view>
-    </view>
-  </navigator>
+  <search/>
   <!-- 轮播图 -->
   <!-- indicator-dots：面板指示点 -->
   <!-- autoplay：是否自动播放 -->
