--- a/components/search/index.wxss
+++ b/components/search/index.wxss
@@ -6,7 +6,6 @@
 .search-input {
   background: #fff;
   height: 60rpx;
-  line-height: 60rpx;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -16,4 +15,15 @@
 }
 .search-input icon{
   margin-right: 5px;
+}
+.left{
+    justify-content: flex-start;
+}
+
+.center{
+    justify-content: center;
+}
+
+.right{
+    justify-content: flex-end;
 }
