--- a/components/search/index.wxml
+++ b/components/search/index.wxml
@@ -1,5 +1,5 @@
 <!-- 头部搜索栏 -->
-  <navigator url="">
+  <navigator url="/pages/search/index">
     <view class="search background" >
       <view class="search-input {{align}}">
         <icon type="search" size="18" /> {{keyword}}
