--- a/pages/category/index.wxml
+++ b/pages/category/index.wxml
@@ -4,7 +4,7 @@
   <view class="content">
 
     <!-- 左边的菜单 -->
-    <view class="menu">
+    <scroll-view scroll-y class="menu">
       <!-- 菜单的子选项 -->
       <block wx:for="{{list}}" wx:key="index">
         <view class="menu-item  {{current===index?'active':''}}" bindtap="handleClick" data-index="{{index}}">
@@ -12,10 +12,10 @@
         </view>
       </block>
 
-    </view>
+    </scroll-view>
 
     <!-- 右边的内容 -->
-    <view class="product">
+    <scroll-view scroll-y class="product">
       <!-- 子分类 -->
       <block wx:for="{{list[current].children}}" wx:key="index">
         <view class="category-list">
@@ -34,6 +34,6 @@
           </view>
         </view>
       </block>
-    </view>
+    </scroll-view>
   </view>
 </view>
