--- a/pages/category/index.wxss
+++ b/pages/category/index.wxss
@@ -1,8 +1,9 @@
 .content {
-  position: fixed;
+  /* position: absolute; */
   top: 100rpx;
-  bottom: 0;
-  width: 100%;
+  /* bottom: 0; */
+  height: calc(100vh-100rpx);
+  width: 750rpx;
   display: flex;
   justify-content: space-between;
 }
@@ -11,7 +12,7 @@
   width: 200rpx;
   height: 100%;
   background: #eee;
-  overflow: auto;
+  /* overflow: auto; */
   /* 控制缩放 */
   flex-shrink: 0;
 }
