实现添加购物车功能

--- a/pages/goods_detail/index.wxml
+++ b/pages/goods_detail/index.wxml
@@ -56,7 +56,7 @@
       <view class="iconfont icon-gouwuche"></view>
       <text>购物车</text>
     </view>
-    <view class="btn-color">加入购物车</view>
-    <view class="btn-color">立即购买</view>
+    <view class="btn-color" bindtap="handleAddCart">加入购物车</view>
+    <view class="btn-color" bindtap="handleAddCart">立即购买</view>
   </view>
 </view>
