--- a/pages/cart/index.wxml
+++ b/pages/cart/index.wxml
@@ -1,2 +1,74 @@
-<!--pages/cart/index.wxml-->
-<text>pages/cart/index.wxml</text>
+<view class="container">
+  <!-- 收获地址 -->
+  <view class="address" wx:if="{{address.name}}">
+    <view class="address-info">
+      <view>收货人:{{address.name}}</view>
+      <view class="tel">{{address.tel}}</view>
+    </view>
+
+    <view class="address-detail">
+      收货地址:{{address.detail}}
+    </view>
+
+    <image mode="aspectFill" src="../../images/cart_border@2x.png"></image>
+  </view>
+
+  <!-- 获取收获地址 -->
+  <view class="address" wx:if="{{!address.name}}" bindtap="handleGetAddress">
+    <view class="address-info">
+      <view>获取收货地址</view>
+      <view class="tel"></view>
+    </view>
+    <image mode="aspectFill" src="../../images/cart_border@2x.png"></image>
+  </view>
+
+  <!-- 购物车商品列表头部 -->
+  <view class="goods-list-title">
+    <view class="iconfont icon-dianpu"></view>
+    优购生活馆
+  </view>
+
+  <!-- 商品列表 -->
+  <view class="goods-list">
+    <!-- 商品单品 -->
+    <view class="goods-item" wx:for="{{goods}}" wx:key="index">
+      <icon type="success" color="red"></icon>
+      <navigator url="/pages/goods_detail/index?id=item.goods_id">
+        <image src="{{item.goods_small_logo}}" mode="aspentFill"></image>
+      </navigator>
+
+      <!-- 商品右侧数据 -->
+      <view class="goods-item-right">
+        <view class="goods-title">{{item.goods_name}}</view>
+        <view class="goods-info">
+          <view class="goods-price">
+            <text>￥</text>{{item.goods_price}}
+          </view>
+          <!-- 商品数量 -->
+          <view class="goods-number">
+            <view class="calc-button" bindtap="handleCalc" data-number="{{-1}}" data-index="{{index}}">-</view>
+            <input value="{{item.number}}"></input>
+            <view class="calc-button" bindtap="handleCalc" 
+            data-number="{{1}}" 
+            data-index="{{index}}">+</view>
+          </view>
+        </view>
+      </view>
+    </view>
+  </view>
+
+  <!-- 全选和总价格 -->
+  <view class="checkout">
+    <view class="allselect">
+      <icon type="success" color="red"></icon>
+      全选
+    </view>
+    <view class="allprice">
+      <view class="allprice-top">合计
+        <text><text>￥</text>{{allPrice}}</text>
+      </view>
+      <view class="allprice-btm">包含运费</view>
+    </view>
+    <view class="checkout-btn">结算</view>
+  </view>
+</view>
