--- a/pages/cart/index.wxml
+++ b/pages/cart/index.wxml
@@ -32,7 +32,9 @@
   <view class="goods-list">
     <!-- 商品单品 -->
     <view class="goods-item" wx:for="{{goods}}" wx:key="index">
-      <icon type="success" color="red"></icon>
+      <icon type="success" color="{{item.select ? 'red' :'gray'}}"
+      bindtap="handleSelect"
+      data-index="{{index}}"></icon>
       <navigator url="/pages/goods_detail/index?id=item.goods_id">
         <image src="{{item.goods_small_logo}}" mode="aspentFill"></image>
       </navigator>
@@ -47,7 +49,10 @@
           <!-- 商品数量 -->
           <view class="goods-number">
             <view class="calc-button" bindtap="handleCalc" data-number="{{-1}}" data-index="{{index}}">-</view>
-            <input value="{{item.number}}"></input>
+            <input value="{{item.number}}" 
+            bindblur="handleBlur"
+            data-index="{{index}}"
+            type="number"></input>
             <view class="calc-button" bindtap="handleCalc" 
             data-number="{{1}}" 
             data-index="{{index}}">+</view>
@@ -60,7 +65,8 @@
   <!-- 全选和总价格 -->
   <view class="checkout">
     <view class="allselect">
-      <icon type="success" color="red"></icon>
+      <icon type="success" color="{{allSelect?'red':'gray'}}"
+      bindtap="handleTabAllSelect"></icon>
       全选
     </view>
     <view class="allprice">
